Split advertisement messages for store chat and Telegram in Foodsharing automation, add audit retention cleanup service, update i18n translations, and enhance Bezirk assignment logic in teacher and admin dashboards.